Fix homepage alignment issue

--- a/packages/frontend/src/pages/index.module.scss
+++ b/packages/frontend/src/pages/index.module.scss
@@ -30,3 +30,8 @@
     margin-bottom: 0px;
   }
 }
+
+.authContainer {
+  flex-grow: 1;
+  width: 100%;
+}
